# farmbotsim-rs

./: Cargo.toml  README.md
configs/farm_entity_plans/: default_point.json
configs/field_configs/: default.json
configs/movement_configs/: default_romba.json
configs/scene_configs/: default.json
experiments/: my_experiment_2025.json
results/: grid_search_10x10_3d.html  grid_search_10x10_results.json
results/demo/na1_nt1000_field20x6/: 20250916_085015_convergence.html  grid_search_20x20_3d.html  grid_search_20x20_results.json  minimum  (+1 more)
results/grid_search/: grid_search_20x20_3d_field1_nt100.html  grid_search_20x20_3d_field1_nt1000.html  grid_search_20x20_3d_field1_nt10000.html  grid_search_20x20_3d_field2_nt10k.html  grid_search_20x20_results_field1_nt100.json  grid_search_20x20_results_field1_nt1000.json  grid_search_20x20_results_field1_nt10000.json  grid_search_20x20_results_field2_nt10k.json
results/optimization/: na1_ns1_field1_nt100  na1_ns1_field1_nt1000  na1_ns1_field2_nt100  na1_ns1_field2_nt1000  na1_ns1_field3_nt100  na1_ns1_field3_nt1000  na1_ns1_field4_nt100  na1_ns2_field1_nt100  na1_ns2_field1_nt1000  na1_ns2_field2_nt100  na1_ns2_field3_nt100  na4_ns1_field1_nt100  na4_ns2_field1_nt100  na4_ns2_field1_nt1000  na4_ns2_field_long_nt100
src/: cfg.rs  experiment.rs  main.rs  optimization.rs  visualization.rs
src/movement_module/: romba_movement.rs
src/task_module/: task_manager.rs
src/tool_module/: experiment_tool.rs  mod.rs
src/utilities/: pos2.rs  vec2.rs
viz/: load_json.py  plot_multi_agent.py  visualization.py
(+79 files in other folders)
