[package]
name = "farmbotsim-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = { version = "0.31.1", features = ["persistence"] }
egui_extras = {version = "0.31.1", features = ["datepicker", "serde"]}
egui_plot = "0.32.1"
rand = "0.9.0"
petgraph = "=0.8.1"
chrono = {version = "0.4.40", features = ["serde"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.3"
enum-iterator = "2.1.0"
egui_commonmark = {version = "0.20", features = ["macros", "embedded_image"]}
egobox-ego = "0.32.0"
ndarray = "0.15"
plotly = { version = "0.13", features = ["plotly_static", "static_export_chromedriver"] }